--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li>
-            <a class="icon alt brands fa-github" href="https://github.com/wboard82">
+            <a class="icon alt brands fa-github" href="https://github.com/josh-keller">
               <span class="label">GitHub</span>
             </a>
           </li>
@@ -104,7 +104,7 @@
             <li><a class="button small icon solid fa-envelope-open-text" href="mailto:jrkeller@gmail.com" target="_blank">Email</a></li>
             <li><a class="button small icon solid fa-file-pdf" href="#" target="_blank">Resume</a></li>
             <li><a class="button small icon brands fa-linkedin" href="https://www.linkedin.com/in/joshua-keller-30888b3b/">LinkedIn</a></li>
-            <li><a class="button small icon brands fa-github" href="https://github.com/wboard82">GitHub</a></li>
+            <li><a class="button small icon brands fa-github" href="https://github.com/josh-keller">GitHub</a></li>
           </ul>
         </section>
         <p class="copyright">Design: <a target="_blank" href="https://html5up.net">HTML5 UP</a>.</p>
