Change linkedin url

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
           </li>
           <li>
-            <a class="icon alt brands fa-linkedin" href="https://www.linkedin.com/in/joshua-keller-30888b3b/">
+            <a class="icon alt brands fa-linkedin" href="www.linkedin.com/in/josh-keller-dev">
               <span class="label">LinkedIn</span>
             </a>
           </li>
