--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
           </li>
           <li>
-            <a class="icon alt solid fa-file-pdf" href="#" target="_blank">
+            <a class="icon alt solid fa-file-pdf" href="assets/JKeller-resume.pdf" target="_blank">
               <span class="label">Resume<span>
             </a>
           </li>
@@ -102,7 +102,7 @@
           <p>Currently looking for my next opportunity. Please get in touch!</p>
           <ul class="actions">
             <li><a class="button small icon solid fa-envelope-open-text" href="mailto:jrkeller@gmail.com" target="_blank">Email</a></li>
-            <li><a class="button small icon solid fa-file-pdf" href="#" target="_blank">Resume</a></li>
+            <li><a class="button small icon solid fa-file-pdf" href="assets/JKeller-resume.pdf" target="_blank">Resume</a></li>
             <li><a class="button small icon brands fa-linkedin" href="https://www.linkedin.com/in/joshua-keller-30888b3b/">LinkedIn</a></li>
             <li><a class="button small icon brands fa-github" href="https://github.com/josh-keller">GitHub</a></li>
           </ul>
