--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body class="is-preload">
 
@@ -56,13 +60,13 @@
           </div>
         </section>
 
-        <section id="featured" class="main">
+        <section id="featured" class="main special">
           <div>
             <div class="content">
               <header class="major">
                 <h2>Hypha</h2>
               </header>
-              <p>Hypa is an open-source observability framework for distributed systems that combines the context of traces with the detail of logs. It deploys an end-to-end telemetry pipeline that sets up distributed tracing, aggregates existing logs, and correlates logs with traces.</p>
+              <p>Hypha is an open-source observability framework for distributed systems that combines the context of traces with the detail of logs. It deploys an end-to-end telemetry pipeline that sets up distributed tracing, aggregates existing logs, and correlates logs with traces.</p>
               
 
               <div class="row aln-center">
@@ -93,6 +97,12 @@
               </div>
             </div>
           </div>
+        </section>
+        <section id="first" class="main special">
+          <header class="major">
+            <h2>Other Projects</h2>
+          </header>
+
         </section>
       </div>
 
