Add small projects, tweak CSS

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <link rel="manifest" href="/site.webmanifest">
   </head>
   <body class="is-preload">
-
     <div id="wrapper">
-
       <header id="header" class="alt">
         <h1>Josh Keller</h1>
         <p>Software Engineer</p>
@@ -53,14 +51,14 @@
               <p>I'm comfortable in JavaScript, Ruby, and Go but I am always open to new challenges. I'm comfortable ramping up on new languages or technologies quickly.</p>
               <p>Most recently I built Hypha, an observability framework that correlates logs and traces to make it easier to debug distributed systems.</p>
               <ul class="actions">
-                <li><a href="#featured" class="button primary">Learn More</a></li>
+                <li><a href="#hypha" class="button primary">Learn More</a></li>
               </ul>
             </div>
             <span class="image"><img src="images/josh.jpg" alt="Josh Keller" /></span>
           </div>
         </section>
 
-        <section id="featured" class="main special">
+        <section id="hypha" class="main special">
           <div>
             <div class="content">
               <header class="major">
@@ -98,10 +96,36 @@
             </div>
           </div>
         </section>
-        <section id="first" class="main special">
+        <section id="portfolio" class="main special">
           <header class="major">
             <h2>Other Projects</h2>
           </header>
+          <ul class="features">
+            <li>
+              <figure class="image fit portfolio">
+              <img src="images/rekwest-bin-screenshot.png" alt="RequestBin Webhook HTTP Tool" />
+              </figure>
+              <h3>RekwestBin</h3>
+              <p>RequestBin-like HTTP request inspection tool built for debugging webhooks.</p>
+              <p class="tech-list">Go, MongoDB, deployed on DigitalOcean Droplet with Nginx reverse proxy.</p>
+            </li>
+            <li>
+              <figure class="image fit portfolio">
+                <img src="images/reaction.png" alt="Trello KanBan Tool" />
+              </figure>
+              <h3>Reaction</h3>
+              <p>Trello-like project management tool.</p>
+              <p class="tech-list">React/Redux, Node.js, Express, RESTful API, MongoDB.</p>
+            </li>
+            <li>
+              <figure class="image fit portfolio">
+                <img src="images/ebook_reader.png" alt="Simple ebook reader webapp" />
+              </figure>
+              <h3>eBook Reader Webapp</h3>
+              <p>A simple webapp for eBook reading.</p>
+              <p class="tech-list">Ruby, Sinatra, JavaScript, ERB</p>
+            </li>
+          </ul>
 
         </section>
       </div>
