Fix linkedIn link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </a>
           </li>
           <li>
-            <a class="icon alt brands fa-linkedin" href="www.linkedin.com/in/josh-keller-dev">
+            <a class="icon alt brands fa-linkedin" href="https://www.linkedin.com/in/josh-keller-dev">
               <span class="label">LinkedIn</span>
             </a>
           </li>
