Add links to images, remove learn more button

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
               <p>I'm a software engineer based in Kalamazoo, MI. I love learning new things and I believe the most important part of software engineering is to deeply understand the problem I am solving.</p>
               <p>I'm comfortable in JavaScript, Ruby, and Go but I am always open to new challenges. I'm comfortable ramping up on new languages or technologies quickly.</p>
               <p>Most recently I built Hypha, an observability framework that correlates logs and traces to make it easier to debug distributed systems.</p>
-              <ul class="actions">
-                <li><a href="#hypha" class="button primary">Learn More</a></li>
-              </ul>
+              <!-- <ul class="actions"> -->
+              <!--   <li><a href="#hypha" class="button primary">Learn More</a></li> -->
+              <!-- </ul> -->
             </div>
             <span class="image"><img src="images/josh.jpg" alt="Josh Keller" /></span>
           </div>
@@ -69,7 +69,7 @@
 
               <div class="row aln-center">
                 <figure class="col-10 col-12-medium col-12-small">
-                  <img src="images/Hypha-Architecture.jpg" alt="Hypha's architecture diagram" />
+                  <a href="https://teamhypha.com/case-study"><img src="images/Hypha-Architecture.jpg" alt="Hypha's architecture diagram" /></a>
                 </figure>
 
                 <!-- <figure class="col-5 col-10-medium col-7-small"> -->
@@ -80,8 +80,10 @@
 
               <p>Hypha’s UI faciliates a debugging workflow that minimized context switching, allowing users to flow between logs and traces to get a full view of their system.</p>
               <div class="row aln-center">
-                <p></p>
-                <img class="col-8 col-10-medium col-12-small" src="images/trace-and-logs.png" alt="Hypha's UI" />
+                <figure class="col-10 col-12-medium col-12-small">
+                  <a href="https://teamhypha.com/case-study"><img class="col-8 col-10-medium col-12-small" src="images/trace-and-logs.png" alt="Hypha's UI" /></a>
+                </figure>
+                
               </div>
               <br />
               <p>I built Hypha as part of a remote team of software engineers using technologies such as Docker, OpenTelemetry, Grafana, NodeJS, Grafana Loki and Jaeger.</p>
