--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </a>
           </li>
           <li>
-            <a class="icon alt solid fa-file-pdf" href="assets/JKeller-resume.pdf" target="_blank">
+            <a class="icon alt solid fa-file-pdf" href="assets/jkeller_resume_05_09_22.pdf" target="_blank">
               <span class="label">Resume<span>
             </a>
           </li>
