Update short bio

--- a/index.html
+++ b/index.html
@@ -47,12 +47,9 @@
               <header class="major">
                 <h2>About Me</h2>
               </header>
-              <p>I'm a software engineer based in Kalamazoo, MI. I love learning new things and I believe the most important part of software engineering is to deeply understand the problem I am solving.</p>
+              <p>I'm a software engineer based in Kalamazoo, MI. My goal is to use technology to make people's lives better. I believe the most important part of software engineering is to deeply understand the problem being solved, especially from the user's perspective.</p>
               <p>I'm comfortable in JavaScript, Ruby, and Go but I am always open to new challenges. I'm comfortable ramping up on new languages or technologies quickly.</p>
-              <p>Most recently I built Hypha, an observability framework that correlates logs and traces to make it easier to debug distributed systems.</p>
-              <!-- <ul class="actions"> -->
-              <!--   <li><a href="#hypha" class="button primary">Learn More</a></li> -->
-              <!-- </ul> -->
+              <p>Most recently I co-created <a href="#hypha">Hypha</a>, an observability framework that correlates logs and traces to make it easier to debug distributed systems.</p>
             </div>
             <span class="image"><img src="images/josh.jpg" alt="Josh Keller" /></span>
           </div>
